<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iandouglas.quizapp.MainActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <TextView
            android:id="@+id/welcome_message"
            style="@style/LargeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/welcome_msg" />

        <View
            style="@style/horizontal_bar"
            android:layout_below="@+id/welcome_message" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <View
            style="@style/horizontal_bar"
            android:layout_above="@+id/footer_content" />

        <LinearLayout
            android:id="@+id/footer_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:onClick="scoreHandler"
                android:text="@string/text_ScoreButton" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/q1"
                style="@style/PrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_Question1" />

            <RadioGroup
                android:id="@+id/q1_radiogroup"
                style="@style/AnswerRadioGrp">

                <RadioButton
                    android:id="@+id/rbtn_question1_1"
                    style="@style/AnswerRadio"
                    android:text="@string/text_Q1Answer1" />

                <RadioButton
                    android:id="@+id/rbtn_question1_2"
                    style="@style/AnswerRadio"
                    android:text="@string/text_Q1Answer2" />

                <RadioButton
                    android:id="@+id/rbtn_question1_3"
                    style="@style/AnswerRadio"
                    android:text="@string/text_Q1Answer3" />

                <RadioButton
                    android:id="@+id/rbtn_question1_4"
                    style="@style/AnswerRadio"
                    android:text="@string/text_Q1Answer4" />

                <RadioButton
                    android:id="@+id/rbtn_question1_5"
                    style="@style/AnswerRadio"
                    android:text="@string/text_Q1Answer5" />
            </RadioGroup>

            <View style="@style/horizontal_bar" />

            <TextView
                android:id="@+id/q2"
                style="@style/PrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_Question2" />

            <Spinner
                android:id="@+id/q2_answers_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View style="@style/horizontal_bar" />

            <TextView
                android:id="@+id/q3"
                style="@style/PrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_Question3" />

            <CheckBox
                android:id="@+id/q3_checkbox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_q3answer1" />

            <CheckBox
                android:id="@+id/q3_checkbox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_q3answer2" />

            <CheckBox
                android:id="@+id/q3_checkbox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_q3answer3" />

            <CheckBox
                android:id="@+id/q3_checkbox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_q3answer4" />

            <View style="@style/horizontal_bar" />

            <TextView
                android:id="@+id/q4"
                style="@style/PrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_Question4" />

            <EditText
                android:id="@+id/q4_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/type_your_answer_here"
                android:inputType="text" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
